--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/qrcode.react": "^1.0.5",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.23",
+    "dotenv": "^17.2.3",
     "postcss": "^8.5.6",
     "puppeteer": "^24.34.0",
     "sharp": "^0.34.5",
